# Aging_DDR_Paper-bot

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: papers.yml  tweet-auth-test.yml  tweet-morning.yml  tweet-once.yml  tweet-weekly.yml  update-and-deploy.yml
data/: posted_ids.json
scipaperbot/: __init__.py  models.py  storage.py  twitter.py
scipaperbot/fetchers/: arxiv.py  biorxiv.py  chemrxiv.py  medrxiv.py  pubmed.py
scripts/: check_twitter_auth.py  get_twitter_oauth2_tokens.py  post_to_twitter.py  twitter_papers_file.py  update_papers.py
site/: app.js  index.html  styles.css
site/data/: papers.json
