[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scipaperbot"
version = "0.1.0"
description = "Aging/DDR Paper Bot: fetch papers, build site, and tweet"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["scipaperbot*"]
exclude = ["site*", "scripts*", "data*", ".github*"]
